# Ferrocrypt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
aes-gcm-crypto/: Cargo.toml
aes-gcm-crypto/src/: encrypt_decrypt_aes_gcm.rs  main.rs
aes-gcm-crypto/src/tests/: tests.rs
crypto-cli/: Cargo.toml
crypto-cli/src/: main.rs
crypto-lib/: Cargo.toml
crypto-lib/src/: archive.rs  archiver.rs  common.rs  hybrid.rs  lib.rs  symmetric.rs  zip.rs
crypto-lib/src/key_examples/: rsa-1024-pub.pem  rsa2048-pub.pem
experiments/: Cargo.toml
experiments/src/: main.rs  reed_solomon.rs  reed_solomon1.rs  reed_solomon_32.rs  reed_solomon_one_by_one.rs
ferrocrypt-cli/: Cargo.toml
ferrocrypt-cli/src/: cli.rs  main.rs
ferrocrypt-cli/tests/: cli_tests.rs
ferrocrypt-gui/: package.json
ferrocrypt-gui-dioxus/: CHANGELOG.md  Cargo.toml  Dioxus.toml  README.md
ferrocrypt-gui-dioxus/assets/: styles.css
ferrocrypt-gui-dioxus/src/: main.rs
ferrocrypt-gui-tauri/: package-lock.json  package.json
ferrocrypt-gui-tauri/src/: App.tsx  styles.css
ferrocrypt-gui-tauri/src-tauri/: Cargo.toml  tauri.windows.conf.json
ferrocrypt-gui-tauri/src-tauri/icons/: icon.icns
ferrocrypt-gui-tauri/src-tauri/src/: lib.rs
ferrocrypt-gui/src/: App.tsx  styles.css
ferrocrypt-gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
ferrocrypt-gui/src-tauri/capabilities/: default.json
ferrocrypt-gui/src-tauri/src/: main.rs
ferrocrypt-lib/: .gitignore  Cargo.toml
ferrocrypt-lib/src/: archiver.rs  common.rs  error.rs  hybrid.rs  lib.rs  reed_solomon.rs  symmetric.rs  tests.rs
ferrocrypt-lib/src/key_examples/: rsa-1024-priv-pass.pem  rsa-2048-priv-pass.pem  rsa-2048-pub.pem  rsa-4096-priv-key.pem  rsa-4096-pub-key.pem  rsa2048-priv.pem
ferrocrypt-lib/src/test_files/: small.txt  test-file.txt
ferrocrypt-lib/tests/: integration_tests.rs
rsa-crypto/: Cargo.toml
rsa-crypto/src/: encrypt_decrypt_rsa.rs  main.rs  rsa_example_2.rs  rsa_example_3.rs
src/: aes_gcm.rs  crypto.rs  encrypt_decrypt.rs  main.rs  rsa.rs  rsa_example_1.rs
