[package]
name = "crypto-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.6"
hex = "0.4.0"
num-traits = "0.2.11"
hex-literal = "0.3.3"
pkcs1 = { version = "0.4", default-features = false, features = ["pkcs8", "alloc"] }
pkcs8 = { version = "0.9", default-features = false, features = ["alloc"] }
zeroize = "1"
rand = "0.8"
aes-gcm = "0.9.4"
thiserror = "1.0"
substring = "1"

[dev-dependencies]


[features]
pem = ["pkcs1/pem", "pkcs8/pem"]
