[package]
name = "crypto-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
hex = "0.4"
num-traits = "0.2"
hex-literal = "0.3"
zeroize = "1"
rand = "0.8"
aes-gcm = { version = "0.10", features = ["std"] }
thiserror = "1.0"
substring = "1"
walkdir = "2"
zip = "0.6.4"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
anyhow = "1.0"
rust-argon2 = "1.0"
rpassword = "5.0"

[dev-dependencies]

