[package]
name = "crypto-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
zeroize = "1"
aes-gcm = { version = "0.10", features = ["std"] }
thiserror = "1.0"
substring = "1"
walkdir = "2"
zip = "0.6.4"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
rust-argon2 = "1.0"
rpassword = "7.2"

[dev-dependencies]

