[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reed-solomon-erasure = "6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
rand = "0.8"
serde_json = "1"

[dev-dependencies]

