[package]
name = "ferrocrypt"
version = "0.2.3"
edition = "2021"

description = "Core Ferrocrypt library: symmetric (XChaCha20-Poly1305 + Argon2id) and hybrid (RSA-4096) encryption utilities."
authors = ["Alexander Alexandrov"]
license = "GPL-3.0-only"
readme = "../README.md"
repository = "https://github.com/alexylon/Ferrocrypt"
homepage = "https://github.com/alexylon/Ferrocrypt"
documentation = "https://docs.rs/ferrocrypt"
keywords = ["cryptography", "encryption", "chacha20poly1305", "argon2", "RSA-4096"]
categories = ["cryptography"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
zeroize = "1"
secrecy = { version = "0.10", features = ["serde"] }
thiserror = "2"
walkdir = "2"
zip = "3"
chacha20poly1305 = { version = "0.10", features = ["std", "stream"] }
rust-argon2 = "2"
sha3 = "0.10"
constant_time_eq = "0"
reed-solomon-simd = "3"
serde = { version = "1", features = ["derive"] }
bincode = "2"

[dev-dependencies]
