[package]
name = "ferrocrypt-gui-tauri"
version = "0.1.0"
description = "Ferrocrypt Tauri App"
authors = ["Alexander Alexandrov"]
license = ""
repository = "https://github.com/alexylon/Ferrocrypt"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2.5", features = ["config-json5"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
ferrocrypt = { path = "../../ferrocrypt-lib" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
