[package]
name = "ferrocrypt-gui"
version = "0.0.1"
description = "Ferrocrypt Tauri App"
authors = ["Alexander Alexandrov"]
license = ""
repository = "https://github.com/alexylon/Ferrocrypt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ferrocrypt = { path = "../../ferrocrypt-lib" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
